# fastapi-boilerplate

./: .env.example  .env.test  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  bandit.yaml  docker-compose.yml  pre-commit-config.yaml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  security.yml
alembic/: env.py
app/: main.py
app/api/routes/: auth_routes.py  health_routes.py
app/core/: config.py  config_test.py  security.py
app/db/: base.py
app/db/models/: refresh_token.py  user.py
app/repositories/: refresh_token_repository.py  user_repository.py
app/schemas/: __init__.py  user_dto.py
app/services/: user_service.py
docs/: ARCHITECTURE.md  USAGE_GUIDE.md
tests/: conftest.py  test_auth.py  test_health.py
